# zkp-llm

./: .gitignore  README.md
docs/: _p2_new.md  _patch.py  demo-a-RESULTS.md  demo-b-result.md  index.html  p2-transcript.md  slide-sharing.md
poc/: .gitignore  README.md
poc/ezkl-embedding-demo/: .dockerignore  Dockerfile  README.md  requirements.txt
poc/ezkl-embedding-demo/scripts/: clean.sh  run-all.sh
poc/ezkl-embedding-demo/src/: 01_make_model.py  02_setup.py  03_prove.py  04_verify.py
poc/risc0-cartesi-step-demo/: .dockerignore  Dockerfile  README.md
poc/risc0-cartesi-step-demo/cartesi-machine/: Cargo.toml
poc/risc0-cartesi-step-demo/cartesi-machine/src/: main.rs
poc/risc0-cartesi-step-demo/scripts/: 00-risc0-hello-world.sh  01-fetch-prover-bin.sh  02-build-machine.sh  03-collect-step.sh  04-prove.sh  05-verify.sh  run-all.sh
poc/risc0-cartesi-step-demo/solidity/: IRiscZeroSelectable.sol  IRiscZeroVerifier.sol  StepVerifier.sol  StructHash.sol  Util.sol
poc/risc0-cartesi-step-demo/solidity/groth16/: ControlID.sol  Groth16Verifier.sol  RiscZeroGroth16Verifier.sol
